update pom for java version